--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -11,12 +11,13 @@ service:
 #  type: ClusterIP
   type: NodePort
 #  type: LoadBalancer
+#  externalPort: 80
   externalPort: 8080
   internalPort: 8080
 #  nodePort: 30080
-  annotations:
-    fabric8.io/expose: "true"
-    fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
+#  annotations:
+#    fabric8.io/expose: "true"
+#    fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
 #resources:
 #  limits:
 #    cpu: 500m
